# mxmap

./: CLAUDE.md  CNAME  PLAN.md  README.md  data.json  data.min.json  datenschutz.html  impressum.html  index.html  indian_municipalities.csv  municipality_domains.json  overrides.json  pyproject.toml  tenant.html  validation_report.csv  validation_report.json
.github/workflows/: nightly.yml
css/: map.css  shared.css
js/: map-shared.js  nav.js
src/mail_sovereignty/: __init__.py  analyze.py  bfs_api.py  classifier.py  classify.py  classify_pipeline.py  cli.py  constants.py  dns.py  evidence.py  geoip.py  log.py  models.py  pipeline.py  postprocess.py  posture.py  preprocess.py  probes.py  resolve.py  signatures.py  validate.py
src/mail_sovereignty/v2/: __init__.py  classifier.py  models.py  probes.py
tests/: conftest.py  test_analyze.py  test_bfs_api.py  test_classifier.py  test_classify.py  test_classify_pipeline.py  test_cli.py  test_constants.py  test_data_validation.py  test_dns.py  test_evidence.py  test_geoip.py  test_models.py  test_pipeline.py  test_posture.py  test_preprocess.py  test_probes.py  test_resolve.py  test_signatures.py  test_validate.py
tests/v2/: test_classifier.py  test_models.py  test_probes.py  test_signatures.py
